fix: Align submit button to bottom right corner in create-new-channel component

--- a/src/app/post-login/home/channel/create-channel/create-new-channel/create-new-channel.component.scss
+++ b/src/app/post-login/home/channel/create-channel/create-new-channel/create-new-channel.component.scss
@@ -53,10 +53,6 @@
 .submit-btn-container {
 	@include dFlex(row, flex-end, center);
 	width: 100%;
-	
-	.submit-btn {
-		align-self: flex-end;
-	}
 }
 
 .add-member-wrapper {
